--- a/package.json
+++ b/package.json
@@ -1,14 +1,18 @@
 {
-  "name": "examen-u2-react",
+  "name": "examen",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.12.0",
-    "@testing-library/react": "^11.2.7",
+    "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-hook-form": "^7.4.2",
+    "react-html-table-to-excel": "^2.0.0",
     "react-scripts": "4.0.3",
+    "react-to-pdf": "0.0.13",
+    "uuid": "^8.3.2",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
